Fixed the font family for the input and button

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -177,6 +177,7 @@ form > input, button{
     padding: 1em;
     border-radius: 5px;
     border: 1px solid var(--grey);
+    font-family: var(--ff-base);
     outline: none;
     cursor: pointer;
 }
